# agenteval-workbench

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  constitution.md  pyproject.toml  qa_in_agentic_ai_deck.pptx
.claude/: settings.local.json
.github/workflows/: validate_dataset.yml
.playwright-mcp/: page-2026-05-04T22-06-33-020Z.yml  page-2026-05-04T22-07-04-515Z.yml  page-2026-05-04T22-10-32-753Z.yml  page-2026-05-04T22-10-51-188Z.yml  page-2026-05-04T22-11-01-980Z.yml  page-2026-05-04T22-11-54-221Z.yml  page-2026-05-04T22-12-05-032Z.yml  page-2026-05-04T22-12-21-572Z.yml  page-2026-05-04T22-12-42-971Z.yml  page-2026-05-04T22-13-20-108Z.yml  page-2026-05-04T22-13-29-860Z.yml
.specify/: init-options.json
.specify/memory/: constitution.md
app/: app.py  page_compare.py  page_evaluate.py  page_generate.py  page_ingest.py  page_inspect.py  page_report.py  page_rubric.py
app/components/: annotation.py  empty_state.py  help_section.py  quick_reference.py  tooltip.py  welcome_modal.py  workflow_nav.py
app/onboarding/: content.py  demo.py  first_run.py
app/utils/: preferences.py
config/: telemetry_journey_invariants.yaml  telemetry_redaction_rules.yaml  telemetry_thresholds.yaml
docs/: dataset_guidelines.md  dataset_structure.md  failure_coverage_matrix.md  failure_mapping.md  failure_taxonomy.md  generic_mapping.md  ingestion_troubleshooting.md  ingestion_usage.md  quick_reference_rubric.md  quick_reference_taxonomy.md  roadmap.md  run_comparison.md  selective_evaluation.md
docs/observability-driven-testing/: architecture.md  data-model.md  implementation-roadmap.md  security-model.md  testing-strategy.md
examples/mappings/: autogen_mapping.yaml  simple_log_mapping.yaml
fixtures/traces/: malformed_trace_bad_types.json  malformed_trace_missing_parent.json  malformed_trace_sensitive_data.json  (+2 more)
prompts/: claude_code_secure_telemetry_prompt.md
rubrics/: v1_agent_general.json  v1_agent_general.yaml
schemas/: annotation_schema.json  auto_evaluation_schema.json  comparison_schema.json  reviewer_score_schema.json  rubric_schema.json  trace_schema.json
scripts/: generate_trace.py  run_eval.py
tests/: conftest.py  test_annotations.py  test_calibration.py  test_comparison.py  test_evaluators.py  test_filtering.py  test_generator.py  test_loader.py  test_report.py  test_rubric_builder.py  test_runner.py  test_runs.py  test_scorer.py  test_service.py  test_tagger.py  test_types.py  test_validator.py
(+270 files in other folders)
