[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval-workbench"
version = "0.1.0"
description = "Security-first evaluation workbench for LLM outputs and autonomous agent workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Juli" }
]
dependencies = [
  "jsonschema>=4.21.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "typing-extensions>=4.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.0.0",
]
ui = [
  "streamlit>=1.30.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agenteval-validate-dataset = "agenteval.dataset.validator:main"
agenteval-eval-runner = "agenteval.core.runner:main"
agenteval-eval-report = "agenteval.core.report:main"
agenteval-eval-calibration = "agenteval.core.calibration:main"
agenteval-generate-case = "agenteval.dataset.generator:main"
agenteval-list-runs = "agenteval.core.runs:main_list"
agenteval-inspect-run = "agenteval.core.runs:main_inspect"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -x"
markers = ["integration: integration tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
